--- a/src/remote_mount/Cargo.toml
+++ b/src/remote_mount/Cargo.toml
@@ -4,5 +4,11 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Blooym"]
 
+[features]
+default = ["protocol_sshfs"]
+protocol_sshfs = []
+
 [dependencies]
 tokio = { version = "1.28.2", features = ["full"] }
+dotenv = "0.15.0"
+async-trait = "0.1.71"
