--- a/src/hermes/Cargo.toml
+++ b/src/hermes/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-remote_mount = { path = "../remote_mount", features = ["protocol-sshfs"] }
+remote_mount = { path = "../remote_mount", features = ["protocol-full"] }
 clap = { version = "4.3.0", features = ["derive", "env"] }
 axum = { version = "0.6.18" }
 dotenv = "0.15.0"
