--- a/crates/remote-mount/Cargo.toml
+++ b/crates/remote-mount/Cargo.toml
@@ -7,17 +7,23 @@ license = "AGPL-3.0-only"
 repository = "https://github.com/Blooym/Hermes"
 
 [features]
-protocols-full = ["protocols-sshfs"]
+default = []
 protocols-sshfs = ["which", "tokio"]
 
-[dependencies]
-async-trait = "0.1.71"
+[dependencies.anyhow]
+version = "1.0.75"
+
+[dependencies.async-trait]
+version = "0.1.73"
 
 [dependencies.tokio]
-version = "1.28.2"
+version = "1.32.0"
 features = ["full"]
 optional = true
 
 [dependencies.which]
 version = "4.4.0"
 optional = true
+
+[dependencies.log]
+version = "0.4.20"
