--- a/crates/hermes/Cargo.toml
+++ b/crates/hermes/Cargo.toml
@@ -14,16 +14,16 @@ name = "hermes"
 path = "src/bin/hermes.rs"
 
 [features]
-# default = ["protocols-sshfs"]
+default = ["protocols-sshfs"]
 protocols-sshfs = ["remote-mount/protocols-sshfs"]
 
 [dependencies]
-clap = { version = "4.3.21", features = ["derive", "env"] }
+clap = { version = "4.4.3", features = ["derive", "env"] }
 remote-mount = { path = "../remote-mount", features = ["protocols-sshfs"] }
 axum = { version = "0.6.20" }
 dotenv = "0.15.0"
-tokio = { version = "1.30.0", features = ["full"] }
-tower-http = { version = "0.4.3", features = ["fs", "trace"] }
+tokio = { version = "1.32.0", features = ["full"] }
+tower-http = { version = "0.4.4", features = ["fs", "trace"] }
 signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
 signal-hook = "0.3.17"
 futures = "0.3.28"
