--- a/crates/hermes/Cargo.toml
+++ b/crates/hermes/Cargo.toml
@@ -18,14 +18,14 @@ default = ["protocols-sshfs"]
 protocols-sshfs = ["remote-mount/protocols-sshfs"]
 
 [dependencies]
-clap = { version = "4.4.16", features = ["derive", "env"] }
+clap = { version = "4.5.22", features = ["derive", "env"] }
 remote-mount = { path = "../remote-mount", features = ["protocols-sshfs"] }
-axum = { version = "0.7.3" }
-dotenv = "0.15.0"
-tokio = { version = "1.35.1", features = ["full"] }
-tower-http = { version = "0.5.0", features = ["fs", "trace"] }
+axum = { version = "0.7.9" }
+dotenvy = "0.15.7"
+tokio = { version = "1.42.0", features = ["full"] }
+tower-http = { version = "0.6.2", features = ["fs", "trace"] }
 signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
 signal-hook = "0.3.17"
-futures = "0.3.30"
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+futures = "0.3.31"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
