--- a/.github/workflows/code_changes.yml
+++ b/.github/workflows/code_changes.yml
@@ -20,12 +20,9 @@ jobs:
   Test:
     name: "Test"
     runs-on: ubuntu-latest
-    strategy:
-        matrix:
-          rust: [ stable ]
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           submodules: recursive
@@ -33,7 +30,7 @@ jobs:
       - name: Setup Rust Toolchain
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          toolchain: ${{ matrix.rust }}
+          toolchain: stable
           components: rustfmt, clippy
           cache: true
 
