--- a/crates/hermes/Cargo.toml
+++ b/crates/hermes/Cargo.toml
@@ -13,7 +13,7 @@ path = "src/lib.rs"
 name = "hermes"
 path = "src/bin/hermes.rs"
 
-[rustc.clippy]
+[lints.rustc]
 unsafe_code = "forbid"
 
 [features]
