--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,45 @@
-[workspace]
-members = ["crates/hermes", "crates/remote-mount"]
-resolver = "2"
+[package]
+name = "hermes"
+version = "0.1.0"
+edition = "2024"
 
-[profile.release]
-strip = true
-codegen-units = 1
+[features]
+default = ["storage-filesystem", "storage-s3", "storage-sshfs"]
+storage-filesystem = ["dep:faccess"]
+storage-s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
+storage-sshfs = ["dep:which"]
+
+[dependencies]
+axum = { version = "0.8.4", features = ["http2"] }
+dotenvy = "0.15.7"
+tokio = { version = "1.45.1", features = [
+    "macros",
+    "rt-multi-thread",
+    "signal",
+    "net",
+] }
+tower-http = { version = "0.6.4", features = [
+    "catch-panic",
+    "normalize-path",
+    "timeout",
+    "trace",
+] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+clap = { version = "4.5.39", features = ["derive", "env"] }
+anyhow = "1.0.98"
+mime_guess = "2.0.5"
+duration-human = "0.1.10"
+clap-duration = "0.1.11"
+
+# Filesystem
+faccess = { version = "0.2.4", optional = true }
+# S3
+aws-sdk-s3 = { version = "1.90.0", optional = true, features = [
+    "behavior-version-latest",
+] }
+aws-config = { version = "1.6.3", optional = true, features = [
+    "behavior-version-latest",
+] }
+# SSHFS
+which = { version = "7.0.3", optional = true, features = ["tracing"] }
